<resources>
    <string name="app_name">Your Need</string>
    <string name="error_msg_no_internet">Not connected to internet</string>
    <string name="error_msg_timeout">The server took too long to respond</string>
    <string name="error_msg_unknown">An unexpected error occurred</string>
    <string name="version">V 1.0</string>
    <string name="app_website">www.jgwholesale.com</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Amar Raut</string>
    <string name="nav_header_subtitle">7710881086</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="mobile">Mobile no.</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="rs">\u20B9</string>
    <string name="name">Name</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_account">Don’t have an account?</string>
    <string name="firstName">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="have_account">Account already exit?</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="feedback">Write your feedback*</string>
    <string name="login_now">Are you sure you want to logout?</string>
    <string name="Checkout_now">Are you sure you want to checkout now?</string>
    <string name="exit_now">Are you sure you want to exit now?</string>
    <string name="logout_now">Are you sure you want to logout now?</string>
    <string name="contact_address">Address: \nAll In One,Maharashtra-411041.</string>
    <string name="contact_phone">+91 9921125771</string>
    <string name="contact_email">info@example.com</string>
    <string name="contact_web">www.allinone.com</string>
    <string name="change_passord">Change Password</string>
    <string name="change_passord_theme">Once the password is change, you will need to login again</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="action_cart">Cart</string>
    <string name="country_prompt">Choose Your City</string>
    <string name="shopbycategory">Category</string>
    <string name="Products">Products</string>
    <string name="pincode">pincode</string>
    <string name="address">Address</string>
    <string name="update_here">Update</string>
    <string name="profile">Profile</string>
    <string name="resetYourPassword">Reset Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="verify_your_otp">Verify OTP</string>
    <string name="resend_otp">Resend  OTP</string>
    <string name="MyCart">My Cart</string>
    <string name="city">city</string>
    <string name="hint_state">state</string>
    <string name="country">country</string>
    <string name="district">district</string>
    <string name="action_edit">edit</string>
    <string name="search">search locatily</string>
    <string name="action_login">Logout</string>
    <string name="total">Total</string>
    <string name="check_out">Checkout</string>
    <string name="count">Count</string>
    <string name="radio_male">Low To High</string>
    <string name="radio_female">High To Low</string>
    <string name="radio_popularity">Popularity</string>
    <string name="Filters">Sort By</string>
    <string name="yes">Yes</string>
    <string name="No">No</string>
    <string name="alert">Do you want to logout?</string>
    <string name="DOB">DOB</string>
    <string name="state">State</string>
    <string name="update_profile">Update Now</string>
    <string name="first_name">First Name</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="btn_retry">Retry</string>
    <string name="cpassword">Confirm Password</string>
    <string name="profile_image">Profile Picture</string>
    <string name="profile_name">First Name</string>
    <string name="profile_email">Email</string>
    <string name="mobileno">Mobile No</string>
    <string name="alt_mobile">Mobile No</string>
    <string name="mobileno_hint">Enter Mobile No.</string>
    <string name="landmark">Landmark</string>
    <string name="update">Update</string>
    <string name="myprofile">My Profile</string>
    <string name="profile_lname">Last Name</string>
    <string name="profile_dob">DOB</string>
    <string name="radio_relevance">Relevance</string>
    <string name="action_search">Search</string>
    <string name="action_searchProduct">Product Name..</string>
    <string name="forgertpassword">Forgot Password</string>
    <string name="orderlist">Order List</string>
    <string name="Rs">\u20B9</string>
    <string name="confirm_order">Checkout</string>
    <string name="submit">Submit</string>
    <string name="entermobile">Enter Mobile Number</string>
    <string name="entervalidmobileno">Enter Valid Mobile Number</string>
    <string name="enterpassword" >Enter Password</string>
    <string name="enterpasswordvalidation">Enter Password should not be less than 6 character</string>
    <string name="account_block">Account Blocked</string>
    <string name="mobilenonotfound">Mobile Number Not Found</string>
    <string name="welcome">Welcome to Your Need App</string>
    <string name="entermobilenoorpassword">Invalid mobile no or password</string>
    <string name="entervalidmobilenopassword">Invalid mobile no or password</string>
    <string name="serverdown">Server Getting Down, please try after sometime</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="permission_denied">Permission Canceled</string>
    <string name="hint_mobileno">Mobile Number (Required)</string>
    <string name="hint_password">Password (Required)</string>
    <string name="signin">Sign In</string>
    <string name="register_now">Register Now !</string>
    <string name="please_wait">please wait...</string>
    <string name="requiredparameter">Required Parameter Missing</string>
    <string name="invalid_key">Invalid Key</string>
    <string name="mobilenoexist">Mobile Number Is Already Register</string>
    <string name="mobilenoregistered">Mobile Number Registered</string>
    <string name="tryagain">Try Again..</string>
    <string name="enterconfirmpassword">Enter Confirm Password</string>
    <string name="oldnewpasswordnotmatch">New password and confirm password doesn\'t match</string>
    <string name="registrationdone">Registration Done Successfully</string>
    <string name="hint_confirmpassword">Confirm Password (Required)</string>
    <string name="login_now_button">Login Now !</string>
    <string name="password_chaged_successfully">Password Changed Successfully</string>
    <string name="passwordchangedfailed">Password Change Failed, Try Tgain</string>
    <string name="invalid_old_password">Invalid Old Password</string>
    <string name="invalid_user">Invalid User</string>
    <string name="feedback_send_successfully">Feedback Sent Successfully</string>
    <string name="feedbackfailed">Feedback Sending Failed, Try Again</string>
    <string name="rateus">Please rate us</string>
    <string name="enterfeedback">Enter Feeddback</string>
    <string name="productnotfound">Products Not Found</string>
    <string name="login_failed">Login Failed</string>
    <string name="sortby">Sort By</string>
    <string name="prize">Prize</string>
    <string name="Qty">Qty</string>
    <string name="operationcanno">Operation cannot perform for single record</string>
    <string name="samerecoredfound">Same Record Found For Quantity</string>
    <string name="nodatafound">No Data Found</string>
    <string name="norecordfound">No Data Found</string>
    <string name="mycart">My Cart</string>
    <string name="check_out_now">Checkout Now</string>
    <string name="cartempty">Your Cart is Empty</string>
    <string name="error_order">Error placing Order, try again</string>
    <string name="aboutus">About us</string>
    <string name="loading">Loading...</string>
    <string name="hono">Oh no!</string>
    <string name="locality">Locality</string>
    <string name="orderplacedsuccefully">Order placed successfully</string>
    <string name="submitting_feedback">Submitting feedback</string>
    <string name="anotherpassword">Password Not Changed,try another password</string>
    <string name="passwordnotchanged">Password Not Changed</string>
    <string name="enternewpassword">Enter new password</string>
    <string name="invalidmobilenopassword">Invalid mobile no or password</string>
    <string name="logout_now2">Logout Now</string>
    <string name="home">Home</string>
    <string name="Profile">Profile</string>
    <string name="Order">Order</string>
    <string name="Support">Support</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="cart">Cart</string>
    <string name="aaroli">Airoli, Mumbai</string>
    <string name="jg_wholesale">JG Wholesale</string>
    <string name="exit">Exit</string>
    <string name="login_now2">Login Now</string>
    <string name="choose_the_city">Choose the City</string>
    <string name="aaroli_mumbai">Airoli, Mumbai</string>
    <string name="order" >Total :</string>
    <string name="change_language">Change Language</string>
    <string name="sortby_language">Sort By Language</string>
    <string name="hint_old_password">Old Password *</string>
    <string name="hint_new_password">New Password *</string>
    <string name="hint_confirm_password">Confirm Password *</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_valid_email">Enter Valid Email Id</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_pincode">Enter Pincode</string>
    <string name="select_country">Select Country</string>
    <string name="select_state">Select State</string>
    <string name="select_city">Select City</string>
    <string name="enter_dob">Enter DOB</string>
    <string name="updating">Updating...</string>
    <string name="profile_updated_successfully">Profile Updated Successfully</string>
    <string name="image_not_getting">image file not getting</string>
    <string name="enter_valid_password">Enter Password should not be less than 6 character</string>
    <string name="my_orders">Orders</string>
    <string name="filters">Sort</string>
    <string name="my_referal">My Referal</string>
    <string name="ref_name">Ref Name</string>
    <string name="ref_mobileno">Ref Mobile</string>
    <string name="date_and_time"><![CDATA[Date & Time]]></string>
    <string name="more">more info</string>
    <string name="you_will_receive_otp">You Will Receive OTP</string>
    <string name="otp">otp</string>
    <string name="line"> dis <strike> count </strike> </string>
    <string name="mobilenonotexist">Mobile Number Does Not Exist !</string>
    <string name="passwordwrong">Password Wrong !</string>
    <string name="enterotp">Enter OTP</string>
    <string name="entervalidotp">Enter Valid OTP !</string>
    <string name="otpnotverified">otp not verified !</string>
    <string name="useralreadyexist">User Already Exist !</string>
    <string name="choose_payment_type">Select Payment Option</string>
    <string name="cashon">Cash on delivery</string>
    <string name="paytm_card">Online (Paytm/Credit/Debit/Net Banking)</string>
</resources>