<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_homepage"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/Profile" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_order"
            android:title="@string/Order" />
        <item
            android:visible="false"
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/ic_aboutus"
            android:title="@string/aboutus" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/ic_support"
            android:title="@string/Support" />
        <item
            android:id="@+id/nav_change_password"
            android:icon="@drawable/ic_password"
            android:title="@string/change_passord" />
        <!--<item
            android:enabled="false"
            android:id="@+id/nav_change_language"
            android:icon="@drawable/ic_change_language"
            android:title="@string/change_language" />-->
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share" />
            <item
                android:visible="false"
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout_now2" />

            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout_now2" />
        </menu>
    </item>
</menu>
