<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:visible="false"
        android:id="@+id/bottom_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/profile" />

    <item
        android:id="@+id/nav_order"
        android:icon="@drawable/ic_order"
        android:title="@string/Order" />
    <item
        android:id="@+id/nav_cart"
        android:icon="@drawable/ic_shopping_basket"
        android:title="@string/cart" />

    <!--<item
        android:id="@+id/nav_support"
        android:icon="@drawable/ic_support"
        android:title="Support" />-->
</menu>