<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:visible="false"
        android:id="@+id/action_notification"
        android:orderInCategory="101"
        android:title="@string/action_cart"
        android:icon="@drawable/actionbar_group_notification_icon"
        app:actionViewClass="android.widget.ImageView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_refresh_menu"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:icon="@drawable/ic_refresh"
        app:actionViewClass="android.widget.ImageView"
        app:showAsAction="always" />
    <item
        android:visible="false"
        android:id="@+id/action_cart"
        android:orderInCategory="100"
        android:title="@string/action_cart"
        android:icon="@drawable/actionbar_group_icon"
        app:actionViewClass="android.widget.ImageView"
        app:showAsAction="ifRoom" />

    <item
        android:visible="false"
        android:id="@+id/action_login"
        android:orderInCategory="102"
        android:title="@string/action_login"
        android:icon="@drawable/ic_login"
        app:showAsAction="ifRoom" />

</menu>
