<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:id="@+id/parentViewLogin"
        android:background="@color/white"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <ImageView
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_120sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_30sdp"
                app:srcCompat="@drawable/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:background="@drawable/rounded_linear"
                android:padding="20dp"
                android:elevation="5dp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_mobileno">

                    <EditText
                        android:id="@+id/LoginMobileNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="10"
                        android:text=""
                        android:drawablePadding="10dp"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:passwordToggleEnabled="true"
                    android:layout_marginTop="20dp"
                    android:hint="@string/hint_password">

                    <EditText
                        android:id="@+id/LoginPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:inputType="textPassword"
                        android:text=""/>
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/loginForgotPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:gravity="right"
                    android:paddingBottom="4dp"
                    android:paddingLeft="4dp"
                    android:paddingTop="4dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/orange"
                    android:textSize="14dp" />
                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/white"
                    android:layout_marginRight="5dp"
                    android:textAllCaps="false"
                    android:textSize="18dp"
                    android:background="@drawable/roundedbutton"
                    android:text="@string/signin" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/txt_Register"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/white"
                        android:layout_marginRight="5dp"
                        android:textAllCaps="false"
                        android:textSize="18dp"
                        android:background="@drawable/roundedbutton"
                        android:text="@string/register_now" />



                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>